Frozen autocommit 2023-10-26 10:17:38.218616