@@ -1,20 +1,6 @@
 /*
- * JBoss, Home of Professional Open Source.
- *
- * Copyright 2018 Red Hat, Inc., and individual contributors
- * as indicated by the @author tags.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Copyright The WildFly Authors
+ * SPDX-License-Identifier: Apache-2.0
  */
 
 package org.wildfly.scripts.test;
@@ -22,16 +8,12 @@ package org.wildfly.scripts.test;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.Callable;
 import java.util.concurrent.TimeoutException;
 import java.util.function.Function;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 import jakarta.json.JsonObject;
 
@@ -55,21 +37,7 @@ import org.wildfly.common.test.LoggingAgent;
  */
 @RunWith(Parameterized.class)
 public class StandaloneScriptTestCase extends ScriptTestCase {
-    private static final boolean MODULAR_JVM;
     private static final String STANDALONE_BASE_NAME = "standalone";
-
-    static {
-        final String javaSpecVersion = System.getProperty("java.specification.version");
-        // Shouldn't happen, but we'll assume we're not a modular environment
-        boolean modularJvm = false;
-        if (javaSpecVersion != null) {
-            final Matcher matcher = Pattern.compile("^(?:1\\.)?(\\d+)$").matcher(javaSpecVersion);
-            if (matcher.find()) {
-                modularJvm = Integer.parseInt(matcher.group(1)) >= 9;
-            }
-        }
-        MODULAR_JVM = modularJvm;
-    }
 
     @Parameter
     public Map<String, String> env;
@@ -82,11 +50,12 @@ public class StandaloneScriptTestCase extends ScriptTestCase {
 
     @Parameters
     public static Collection<Object> data() {
-        final Collection<Object> result = new ArrayList<>(2);
-        result.add(Collections.emptyMap());
-        result.add(Collections.singletonMap("GC_LOG", "true"));
-        result.add(Collections.singletonMap("MODULE_OPTS", "-javaagent:logging-agent-tests.jar=" + LoggingAgent.DEBUG_ARG));
-        return result;
+        return List.of(
+                Map.of(),
+                Map.of("GC_LOG", "true"),
+                Map.of("MODULE_OPTS", "-javaagent:logging-agent-tests.jar=" + LoggingAgent.DEBUG_ARG),
+                Map.of("SECMGR", "true")
+        );
     }
 
     @Test
@@ -118,8 +87,9 @@ public class StandaloneScriptTestCase extends ScriptTestCase {
         // however the workaround is to do something like file=`\`"C:\wildfly\standalong\logs\gc.log`\`". This does not
         // seem to work when a directory has a space. An error indicating the trailing quote cannot be found. Removing
         // the `\ parts and just keeping quotes ends in the error shown in JDK-8215398.
-        Assume.assumeFalse(TestSuiteEnvironment.isWindows() && MODULAR_JVM && env.containsKey("GC_LOG") && script.getScript().toString().contains(" "));
+        Assume.assumeFalse(TestSuiteEnvironment.isWindows() && env.containsKey("GC_LOG") && script.getScript().toString().contains(" "));
         script.start(STANDALONE_CHECK, env, ServerHelper.DEFAULT_SERVER_JAVA_OPTS);
+
         Assert.assertNotNull("The process is null and may have failed to start.", script);
         Assert.assertTrue("The process is not running and should be", script.isAlive());
 
@@ -151,13 +121,7 @@ public class StandaloneScriptTestCase extends ScriptTestCase {
         if ("true".equals(env.get("GC_LOG"))) {
             final Path logDir = script.getContainerHome().resolve("standalone").resolve("log");
             Assert.assertTrue(Files.exists(logDir));
-            final String fileName;
-            // The IBM J9 JVM does seems to just use the gc.log name format for the current file name.
-            if (MODULAR_JVM || TestSuiteEnvironment.isJ9Jvm()) {
-                fileName = "gc.log";
-            } else {
-                fileName = "gc.log.0.current";
-            }
+            final String fileName = "gc.log";
             Assert.assertTrue(String.format("Missing %s file in %s", fileName, logDir), Files.exists(logDir.resolve(fileName)));
         }
     }
